add profile picture with formatting

--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -84,6 +84,10 @@ header {
 		display: block;
 		margin: 0 auto 20px;
 	}
+	.img-responsive {
+		max-width: 50%;
+		border-radius: 100%;
+	}
 	.intro-text {
 		.name {
 			display: block;
