--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -80,6 +80,10 @@ header img {
   display: block;
   margin: 0 auto 20px;
 }
+header .img-responsive {
+  max-width: 50%;
+  border-radius: 100%;
+}
 header .intro-text .name {
   display: block;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
