--- a/less/variables.less
+++ b/less/variables.less
@@ -2,8 +2,9 @@
 
 // Gray and Brand Colors for use across theme
 
-@theme-primary:    #2C3E50;
-@theme-success:    #18BC9C;
+@theme-primary:    #0D47A1;
+@theme-success:    #2196F3;
+@accent:           #76FF03;
 
 @gray-base:        #000;
 @gray-darker:      lighten(@gray-base, 13.5%); // #222
