add accent color to buttons and hoverables

--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -144,7 +144,7 @@ header {
 			a {
 				color: white;
 				&:hover {
-					color: @theme-success;
+					color: @accent;
 					outline: none;
 				}
 				&:focus,
@@ -155,12 +155,12 @@ header {
 			&.active {
 				a {
 					color: white;
-					background: @theme-success;
+					background: @accent;
 					&:hover,
 					&:focus,
 					&:active {
 						color: white;
-						background: @theme-success;
+						background: @accent;
 					}
 				}
 			}
