--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -18,7 +18,7 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #18BC9C;
+  color: #2196F3;
   outline: none;
 }
 h1,
@@ -54,22 +54,22 @@ hr.star-light {
   border-color: white;
 }
 hr.star-light:after {
-  background-color: #18BC9C;
+  background-color: #2196F3;
   color: white;
 }
 hr.star-primary {
-  border-color: #2C3E50;
+  border-color: #0D47A1;
 }
 hr.star-primary:after {
   background-color: white;
-  color: #2C3E50;
+  color: #0D47A1;
 }
 .img-centered {
   margin: 0 auto;
 }
 header {
   text-align: center;
-  background: #18BC9C;
+  background: #2196F3;
   color: white;
 }
 header .container {
@@ -78,10 +78,9 @@ header .container {
 }
 header img {
   display: block;
-  margin: 0 auto 20px;
+  margin: 0 auto;
 }
 header .img-responsive {
-  max-width: 50%;
   border-radius: 100%;
 }
 header .intro-text .name {
@@ -108,7 +107,7 @@ header .intro-text .skills {
   }
 }
 .navbar-custom {
-  background: #2C3E50;
+  background: #0D47A1;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -119,6 +118,7 @@ header .intro-text .skills {
 }
 .navbar-custom .navbar-brand {
   color: white;
+  opacity: 87%;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
@@ -133,7 +133,7 @@ header .intro-text .skills {
   color: white;
 }
 .navbar-custom .navbar-nav li a:hover {
-  color: #18BC9C;
+  color: #76FF03;
   outline: none;
 }
 .navbar-custom .navbar-nav li a:focus,
@@ -142,13 +142,13 @@ header .intro-text .skills {
 }
 .navbar-custom .navbar-nav li.active a {
   color: white;
-  background: #18BC9C;
+  background: #76FF03;
 }
 .navbar-custom .navbar-nav li.active a:hover,
 .navbar-custom .navbar-nav li.active a:focus,
 .navbar-custom .navbar-nav li.active a:active {
   color: white;
-  background: #18BC9C;
+  background: #76FF03;
 }
 .navbar-custom .navbar-toggle {
   color: white;
@@ -158,9 +158,9 @@ header .intro-text .skills {
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #18BC9C;
+  background-color: #2196F3;
   color: white;
-  border-color: #18BC9C;
+  border-color: #2196F3;
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -190,7 +190,7 @@ section h2 {
   font-size: 3em;
 }
 section.success {
-  background: #18BC9C;
+  background: #2196F3;
   color: white;
 }
 @media (max-width: 767px) {
@@ -212,7 +212,7 @@ section.success {
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .caption {
-  background: rgba(24, 188, 156, 0.9);
+  background: rgba(33, 150, 243, 0.9);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -244,7 +244,7 @@ section.success {
 #portfolio * {
   z-index: 2;
 }
-@media (min-width: 767px) {
+@media (min-width: 768px) {
   #portfolio .portfolio-item {
     margin: 0 0 30px;
   }
@@ -293,7 +293,7 @@ section.success {
   opacity: 1;
 }
 .floating-label-form-group-with-focus label {
-  color: #18BC9C;
+  color: #2196F3;
 }
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #eeeeee;
@@ -306,14 +306,14 @@ footer h3 {
 }
 footer .footer-above {
   padding-top: 50px;
-  background-color: #2C3E50;
+  background-color: #0D47A1;
 }
 footer .footer-col {
   margin-bottom: 50px;
 }
 footer .footer-below {
   padding: 25px 0;
-  background-color: #233140;
+  background-color: #0b3d89;
 }
 .btn-outline {
   color: white;
@@ -327,14 +327,14 @@ footer .footer-below {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-  color: #18BC9C;
+  color: #2196F3;
   background: white;
   border: solid 2px white;
 }
 .btn-primary {
   color: white;
-  background-color: #2C3E50;
-  border-color: #2C3E50;
+  background-color: #0D47A1;
+  border-color: #0D47A1;
   font-weight: 700;
 }
 .btn-primary:hover,
@@ -343,8 +343,8 @@ footer .footer-below {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #1a242f;
-  border-color: #161f29;
+  background-color: #093272;
+  border-color: #082e68;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -366,17 +366,17 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #2C3E50;
-  border-color: #2C3E50;
+  background-color: #0D47A1;
+  border-color: #0D47A1;
 }
 .btn-primary .badge {
-  color: #2C3E50;
+  color: #0D47A1;
   background-color: white;
 }
 .btn-success {
   color: white;
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+  background-color: #2196F3;
+  border-color: #2196F3;
   font-weight: 700;
 }
 .btn-success:hover,
@@ -385,8 +385,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-success.active,
 .open .dropdown-toggle.btn-success {
   color: white;
-  background-color: #128f76;
-  border-color: #11866f;
+  background-color: #0c7cd5;
+  border-color: #0b76cc;
 }
 .btn-success:active,
 .btn-success.active,
@@ -408,11 +408,11 @@ fieldset[disabled] .btn-success:active,
 .btn-success.disabled.active,
 .btn-success[disabled].active,
 fieldset[disabled] .btn-success.active {
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+  background-color: #2196F3;
+  border-color: #2196F3;
 }
 .btn-success .badge {
-  color: #18BC9C;
+  color: #2196F3;
   background-color: white;
 }
 .btn-social {
@@ -484,7 +484,7 @@ fieldset[disabled] .btn-success.active {
   height: 75px;
   width: 1px;
   margin-left: 35px;
-  background-color: #2C3E50;
+  background-color: #0D47A1;
   transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   /* IE 9 */
@@ -495,7 +495,7 @@ fieldset[disabled] .btn-success.active {
 .portfolio-modal .close-modal .lr .rl {
   height: 75px;
   width: 1px;
-  background-color: #2C3E50;
+  background-color: #0D47A1;
   transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   /* IE 9 */
