add timeline and hackathons sections

--- a/less/variables.less
+++ b/less/variables.less
@@ -4,7 +4,7 @@
 
 @theme-primary:    #0D47A1;
 @theme-success:    #2196F3;
-@accent:           #76FF03;
+@accent:           #64DD17;
 
 @gray-base:        #000;
 @gray-darker:      lighten(@gray-base, 13.5%); // #222
