--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -167,7 +167,7 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #8DCFEC;
+  color: #b9e1f3;
   outline: none;
 }
 h1,
@@ -200,17 +200,17 @@ hr.star-primary:after {
   padding: 0 0.25em;
 }
 hr.star-light {
-  border-color: white;
+  border-color: #F4F2F8;
 }
 hr.star-light:after {
   background-color: #1C558A;
-  color: white;
+  color: #F4F2F8;
 }
 hr.star-primary {
   border-color: #1C558A;
 }
 hr.star-primary:after {
-  background-color: white;
+  background-color: #F4F2F8;
   color: #1C558A;
 }
 .img-centered {
@@ -219,7 +219,7 @@ hr.star-primary:after {
 header {
   text-align: center;
   background: #1C558A;
-  color: white;
+  color: #F4F2F8;
 }
 header .container {
   padding-top: 100px;
@@ -256,7 +256,7 @@ header .intro-text .skills {
   }
 }
 .navbar-custom {
-  background: #2984C4;
+  background: #184875;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -282,7 +282,7 @@ header .intro-text .skills {
   color: white;
 }
 .navbar-custom .navbar-nav li a:hover {
-  color: #1C558A;
+  color: #8DCFEC;
   outline: none;
 }
 .navbar-custom .navbar-nav li a:focus,
@@ -338,9 +338,13 @@ section h2 {
   margin: 0;
   font-size: 3em;
 }
-section.success {
+section.dark {
   background: #1C558A;
-  color: white;
+  color: #F4F2F8;
+}
+section.light {
+  background: #F4F2F8;
+  color: #1C558A;
 }
 @media (max-width: 767px) {
   section {
@@ -437,28 +441,28 @@ section.success {
 }
 .floating-label-form-group ::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
-  color: #1C558A;
+  color: #F4F2F8;
 }
 .floating-label-form-group :-moz-placeholder {
   /* Mozilla Firefox 4 to 18 */
-  color: #1C558A;
+  color: #F4F2F8;
   opacity: 1;
 }
 .floating-label-form-group ::-moz-placeholder {
   /* Mozilla Firefox 19+ */
-  color: #1C558A;
+  color: #F4F2F8;
   opacity: 1;
 }
 .floating-label-form-group :-ms-input-placeholder {
   /* Internet Explorer 10-11 */
-  color: #1C558A;
+  color: #F4F2F8;
 }
 .floating-label-form-group :-ms-input-placeholder {
   /* Microsoft Edge */
-  color: #1C558A;
+  color: #F4F2F8;
 }
 .floating-label-form-group .form-control {
-  color: #1C558A;
+  color: #F4F2F8;
 }
 .floating-label-form-group-with-value label {
   top: 0;
@@ -468,21 +472,21 @@ section.success {
   color: #1C558A;
 }
 footer {
-  color: white;
+  color: #F4F2F8;
 }
 footer h3 {
   margin-bottom: 30px;
 }
 footer .footer-above {
   padding-top: 50px;
-  background-color: #2984C4;
+  background-color: #1C558A;
 }
 footer .footer-col {
   margin-bottom: 50px;
 }
 footer .footer-below {
   padding: 25px 0;
-  background-color: #2576af;
+  background-color: #184875;
 }
 .btn-outline {
   color: white;
@@ -499,48 +503,6 @@ footer .footer-below {
   color: #1C558A;
   background: white;
   border: solid 2px white;
-}
-.btn-light-accent {
-  color: white;
-  background-color: #8DCFEC;
-  border-color: #8DCFEC;
-  font-weight: 700;
-}
-.btn-light-accent:hover,
-.btn-light-accent:focus,
-.btn-light-accent:active,
-.btn-light-accent.active,
-.open .dropdown-toggle.btn-light-accent {
-  color: white;
-  background-color: #61bde5;
-  border-color: #59b9e3;
-}
-.btn-light-accent:active,
-.btn-light-accent.active,
-.open .dropdown-toggle.btn-light-accent {
-  background-image: none;
-}
-.btn-light-accent.disabled,
-.btn-light-accent[disabled],
-fieldset[disabled] .btn-light-accent,
-.btn-light-accent.disabled:hover,
-.btn-light-accent[disabled]:hover,
-fieldset[disabled] .btn-light-accent:hover,
-.btn-light-accent.disabled:focus,
-.btn-light-accent[disabled]:focus,
-fieldset[disabled] .btn-light-accent:focus,
-.btn-light-accent.disabled:active,
-.btn-light-accent[disabled]:active,
-fieldset[disabled] .btn-light-accent:active,
-.btn-light-accent.disabled.active,
-.btn-light-accent[disabled].active,
-fieldset[disabled] .btn-light-accent.active {
-  background-color: #8DCFEC;
-  border-color: #8DCFEC;
-}
-.btn-light-accent .badge {
-  color: #8DCFEC;
-  background-color: white;
 }
 .btn-primary {
   color: white;
@@ -660,6 +622,8 @@ fieldset[disabled] .btn-success.active {
   outline: none;
 }
 .portfolio-modal .modal-content {
+  background-color: #F4F2F8;
+  color: #1C558A;
   border-radius: 0;
   background-clip: border-box;
   -webkit-box-shadow: none;
@@ -719,6 +683,7 @@ fieldset[disabled] .btn-success.active {
   display: none;
 }
 .card {
-  background-color: #F4F2F8;
+  background-color: #1C558A;
+  color: #F4F2F8;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
