--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -143,9 +143,9 @@ header {
     letter-spacing: 1px;
     li {
       a {
-        color: white;
+        color: @light-accent;
         &:hover {
-          color: @light-accent;
+          color: white;
           outline: none;
         }
         &:focus,
@@ -156,7 +156,7 @@ header {
       &.active {
         a {
           color: white;
-          background: @dark-accent;
+          background: @light-accent;
           &:hover,
           &:focus,
           &:active {
@@ -203,7 +203,7 @@ header {
 }
 
 section {
-  padding: 100px 0;
+  padding: 50px 0;
   h2 {
     margin: 0;
     font-size: 3em;
